--- a/scss/components/_soe_beans.scss
+++ b/scss/components/_soe_beans.scss
@@ -254,10 +254,6 @@
 
     @include breakpoint-max(small) {
       display: block;
-      padding: 0;
-    }
-
-    @include breakpoint-max(smaller) {
       padding: 0 44px 40px;
     }
   }
